Fixed Add Group Participant Issue and Updated the Swagger doc GroupDataModel and optimized the api
