# src/controller/GroupController.ts
@@ -11,7 +11,6 @@ import {
 import { TYPES } from "../config/types";
 import IChatService from "../services/interface/IChatService";
 import { authentication } from "../middleware/authentication.middleware";
-import sequelize from "../database/connection";
 import IUserService from "../services/interface/IUserService";
 import {
   GroupDataModel,
@@ -19,21 +18,33 @@ import {
 } from "../models/GroupDataModel";
 import IGroupService from "../services/interface/IGroupService";
 import { GroupDto, GroupMemberDto } from "../dtos/GroupDto";
+import IMiscellaneousService from "../services/interface/IMiscellaneousService";
+import { CurrentUserDto } from "../dtos/UserDto";
 
 @controller("/group")
 export class GroupController implements interfaces.Controller {
-  private readonly _chatService: IChatService;
-  private readonly _userService: IUserService;
-  private readonly _groupService: IGroupService;
+  private readonly chatService: IChatService;
+  private readonly userService: IUserService;
+  private readonly groupService: IGroupService;
+  private readonly miscellaneousService: IMiscellaneousService;
+  private readonly currentUser: CurrentUserDto;
+  private readonly currentUserId: number;
+  private readonly currentUserGuid: string;
 
   constructor(
     @inject(TYPES.IChatService) chatService: IChatService,
     @inject(TYPES.IUserService) userService: IUserService,
-    @inject(TYPES.IGroupService) groupService: IGroupService
+    @inject(TYPES.IGroupService) groupService: IGroupService,
+    @inject(TYPES.IMiscellaneousService) miscellaneousService: IMiscellaneousService
   ) {
-    this._chatService = chatService;
-    this._userService = userService;
-    this._groupService = groupService;
+    this.chatService = chatService;
+    this.userService = userService;
+    this.groupService = groupService;
+    this.miscellaneousService = miscellaneousService;
+    this.currentUser = this.miscellaneousService.currentUser();
+    this.currentUserId = this.currentUser.id;
+    this.currentUserGuid = this.currentUser.guid;
+    
   }
 
   @httpPost("/create", authentication)
@@ -41,30 +52,25 @@ export class GroupController implements interfaces.Controller {
     @request() req: Request,
     @response() res: Response
   ): Promise<Response<GroupDto>> {
-    const t = await sequelize.transaction();
     try {
       const model: GroupDataModel = req.body;
 
-      if (!model.adminId || !model.name) {
+      if (!this.currentUserId || !model.name) {
         return res
           .status(400)
           .json({ success: false, message: "Invalid request payload" });
       }
 
-      const response = await this._groupService.createGroup(
-        model.adminId,
+      const response = await this.groupService.createGroup(
         model.name
       );
 
       if (response && response.data && response.success) {
-        await t.commit();
         return res.status(200).json(response);
       } else {
-        await t.rollback();
         return res.status(400).json(response);
       }
     } catch (error) {
-      await t.rollback();
       console.error("Error while creating group:", error);
       return res.status(500).json({
         success: false,
@@ -79,31 +85,26 @@ export class GroupController implements interfaces.Controller {
     @request() req: Request,
     @response() res: Response
   ): Promise<Response<GroupMemberDto>> {
-    const t = await sequelize.transaction();
     try {
       const model: GroupParticipantDataModel = req.body;
 
-      if (!model.groupId || !model.memberId || !model.currentUserId) {
+      if (!model.groupId || !model.memberId || !this.currentUserId) {
         return res
           .status(400)
           .json({ success: false, message: "Invalid request payload" });
       }
 
-      const response = await this._groupService.addGroupParticipant(
+      const response = await this.groupService.addGroupParticipant(
         model.groupId,
-        model.memberId,
-        model.currentUserId
+        model.memberId
       );
 
       if (response && response.data && response.success) {
-        await t.commit();
         return res.status(200).json(response);
       } else {
-        await t.rollback();
         return res.status(400).json(response);
       }
     } catch (error) {
-      await t.rollback();
       console.error("Error while creating group:", error);
       return res.status(500).json({
         success: false,
